try to fix cite alignment

--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ blockquote {
 }
 
 cite {
-    
-  text-align: center;
+    margin-left: 20%;
+  /* text-align: center; */
 }
   
 blockquote p {
